fix: fix calendar clipped problem

--- a/src/app.css
+++ b/src/app.css
@@ -9,17 +9,13 @@ body {
   width: 100%;
   left: 0;
   top: 0;
-  overflow: hidden;
-  position: relative;
   display: flex;
-  /* background-color: #ff6666; */
 }
 
 .second-column {
   flex: 1;
   display: flex;
   flex-direction: column;
-  /* background-color: #ff6666; */
 }
 
 .invisible {
@@ -30,6 +26,9 @@ body {
   border: 1px solid var(--color-border-tertiary);
   border-bottom: none;
   border-left: none;
-  height: calc(100vh - 80px);
+  height: calc(100vh - 83px);
+  max-width: 100vw;
+  position: relative;
+  z-index: 3;
   overflow-y: auto;
 }
