--- a/src/mainPage/content/index.css
+++ b/src/mainPage/content/index.css
@@ -2,7 +2,7 @@
   margin-left: 24px;
   margin-top: 24px;
   margin-right: 16px;
-  margin-bottom: 32px;
+  /* margin-bottom: 32px; */
   height: 100%;
   /* background-color: aqua; */
   display: flex;
@@ -24,7 +24,7 @@
   /* padding-bottom: 16px; */
   /* background-color: bisque; */
   height: 100%;
-  padding-bottom: 32px;
+  /* padding-bottom: 32px; */
   display: flex;
   flex-direction: column;
   position: relative;
