--- a/src/mainPage/sidebar/index.css
+++ b/src/mainPage/sidebar/index.css
@@ -48,14 +48,16 @@
 
 .side-bar-container {
   font-size: 30px;
-  position: relative;
+  position: sticky;
   width: 288px;
   min-height: 100vh;
-  height: auto;
+  max-height: 100vh;
+  /* height: auto; */
   display: flex;
   flex-direction: column;
   transition: height 0.3s, width 0.3s;
   border-right: 1px solid var(--color-border-tertiary);
+  z-index: 2;
 }
 
 .collapse-button {
